; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c_tracing_record_cmdline.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c_tracing_record_cmdline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

@trace_record_cmdline_disabled = common dso_local global i32 0, align 4
@tracer_enabled = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tracing_record_cmdline(%struct.task_struct* %0) #0 {
  %2 = alloca %struct.task_struct*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %2, align 8
  %3 = call i64 @atomic_read(i32* @trace_record_cmdline_disabled)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %11, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* @tracer_enabled, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %5
  %9 = call i32 (...) @tracing_is_on()
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %8, %5, %1
  br label %15

12:                                               ; preds = %8
  %13 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %14 = call i32 @trace_save_cmdline(%struct.task_struct* %13)
  br label %15

15:                                               ; preds = %12, %11
  ret void
}

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @tracing_is_on(...) #1

declare dso_local i32 @trace_save_cmdline(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
